--- a/.classpath
+++ b/.classpath
@@ -6,8 +6,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/נחשון סתת/eclipse-workspace/Ex4_OOP/mysql-connector-java-5.1.47.jar"/>
-	<classpathentry kind="lib" path="C:/Users/נחשון סתת/eclipse-workspace/Ex4_OOP/Graph_v0.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/נחשון סתת/eclipse-workspace/Ex4_OOP/Ex4_v0.2.jar"/>
+	<classpathentry kind="lib" path="Ex4_v0.2.jar"/>
+	<classpathentry kind="lib" path="Graph_v0.11.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-java-5.1.47.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
